--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
+
 body{
-  background-color: grey;
+  background-color: #FFFFFF;
+  /* height: 10000px; */
 }
