--- a/src/Full/Components/Header/Header.module.css
+++ b/src/Full/Components/Header/Header.module.css
@@ -62,6 +62,7 @@
     display: none;
     justify-content: center;
     align-items: center;
+    color: black;
 }
 .btnMetaTop{
     border-top-left-radius: 30px;
@@ -140,7 +141,7 @@
 
 @media (max-height: 820px) {
   .btnWindow{
-    bottom: 10px;
+    bottom: 30px;
   }
 }
 
