--- a/src/Full/Components/Header/Header.module.css
+++ b/src/Full/Components/Header/Header.module.css
@@ -120,7 +120,8 @@
     height: 60px;
     background-color: rgb(128, 128, 128, 0.1);
     position: fixed;
-    bottom: 30px;
+    bottom: 15px;
+    color: black;
     left: 50%;
     transform: translateX(-50%);
     font-size: 25px;
