--- a/src/Full/Components/Header/windowAboutUs/windowAboutUs.module.css
+++ b/src/Full/Components/Header/windowAboutUs/windowAboutUs.module.css
@@ -1,7 +1,7 @@
 .wrapper{
     width: 500px;
-    height: 100%;
-    background-color: #E0F2F1;
+    height: 110%;
+    background-color: #47ccc6;
     position: fixed;
     border: 2px solid black;
     border-radius: 30px;
