--- a/src/Full/Components/Main/Main.module.css
+++ b/src/Full/Components/Main/Main.module.css
@@ -1,7 +1,7 @@
 .wrapper{
     width: 95%;
     height: auto;
-    margin: 100px auto;
+    margin: 100px auto 50px auto;
     background-color: #E0F2F1;
     border-radius: 30px;
 }
