--- a/src/Full/Components/MainService/MainService.module.css
+++ b/src/Full/Components/MainService/MainService.module.css
@@ -60,7 +60,9 @@
     right: 15px;
     color: white;
     font-size: 20px;
+    display: flex;
 }
+
 
 
 
@@ -153,11 +155,38 @@
 
 @media (max-width: 450px) {
     .Link1, .Link2, .Link3, .Link4, .Link5, .Link6{
-        height: 150px;
-
+        height: 130px;
+        width: 100%;
     }
 }
 
+
+@media (max-width: 380px) {
+    .Link1, .Link2, .Link5{
+        background-position: center -20px
+    }
+    .Link4{
+        background-position: center -90px
+    }
+    .Link3{
+        background-size: 650px 350px;
+    }
+    .Link6{
+        background-position: center -60px
+    }
+}
+
+
+
+
+
+
+
+/* @media (max-width: 380px) {
+    .Link1, .Link2, .Link3, .Link4, .Link5, .Link6{
+        height: 130px;
+    }
+} */
 
 /* background-position: center -50px;
 background-size: 380px 200px; */
