--- a/src/Full/Components/MainService/MainService.module.css
+++ b/src/Full/Components/MainService/MainService.module.css
@@ -177,6 +177,25 @@
 }
 
 
+@media (max-width: 350px) {
+    .Link4{
+        background-position: center -60px
+    }
+    .Link6{
+        background-position: center -60px
+    }
+}
+
+
+@media (max-width: 310px) {
+    .Link4{
+        background-position: center -30px
+    }
+    .Link6{
+        background-position: center -30px
+    }
+}
+
 
 
 
