--- a/src/Full/Components/Footer/pole/input.module.css
+++ b/src/Full/Components/Footer/pole/input.module.css
@@ -10,9 +10,10 @@
 
 .massage{
     width: 80%;
+    height: 40px;
     border-radius: 50px;
     font-size: 20px;
-    padding: 20px 0 0 15px;
+    padding: 15px 0 0 15px;
     outline: none; 
     resize: none;
 }
