--- a/src/pages/page1/page1.module.css
+++ b/src/pages/page1/page1.module.css
@@ -1,7 +1,29 @@
 .wrapper{
     width: 95%;
-    height: 500px;
+    height: auto;
     background-color: #E0F2F1;
     border-radius: 30px;
     margin: 100px auto 0 auto; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+
+.wrapper1{
+    margin-top: 30px;
+}
+
+
+.emptyBlock{
+    width: 300px;
+    height: 500px;
+}
+
+
+@media (max-width: 780px) {
+    .wrapper{
+        width: 100%;
+    }
 }
