--- a/src/pages/employeeCard/employeeCard.module.css
+++ b/src/pages/employeeCard/employeeCard.module.css
@@ -215,5 +215,35 @@
 
 @media (max-width: 640px) {
     .wrapper{
+        width: 250px;
+        height: 400px;
     }
+    .hole{
+        width: 80px;
+        height: 15px;
+    }
+    .name1{
+        font-size: 18px;
+    }
+    .boxBtn{
+        bottom: 20px;
+    }
+}
+
+
+@media (max-width: 540px) {
+    .wrapper{
+        width: 280px;
+        height: 430px;
+    }
+    /* .hole{
+        width: 80px;
+        height: 15px;
+    }
+    .name1{
+        font-size: 18px;
+    }
+    .boxBtn{
+        bottom: 20px;
+    } */
 }
