--- a/src/pages/employeeCard/employeeCard.module.css
+++ b/src/pages/employeeCard/employeeCard.module.css
@@ -53,19 +53,12 @@
     bottom: 50px;
 }
 .btnInfo, .btnOrder, .btnBackSide2, .btnOrderSide2{
+    width: 40%;
     margin-top: 20px;
     height: 40px;
     border-radius: 30px;
     font-size: 20px;
 }
-.btnInfo, .btnBackSide2{
-    width: 40%;
-}
-.btnOrder, .btnOrderSide2{
-    width: 40%;
-
-}
-
 
 .foto{
     width: 135px;
@@ -205,6 +198,11 @@
 }
 
 
+.btnInfo, .btnOrder, .btnBackSide2, .btnOrderSide2{
+    color: black;
+}
+
+
 
 @media (max-width: 780px) {
     .wrapper, .wrapperSide2, .wrapperSide3{
@@ -214,13 +212,13 @@
 
 
 @media (max-width: 640px) {
-    .wrapper{
-        width: 250px;
+    .wrapper, .wrapperSide2, .wrapperSide3{
+        width: 230px;
         height: 400px;
     }
     .hole{
-        width: 80px;
-        height: 15px;
+        width: 90px;
+        height: 18px;
     }
     .name1{
         font-size: 18px;
@@ -228,22 +226,61 @@
     .boxBtn{
         bottom: 20px;
     }
+
+
+    .name, .email, .tel{ /**/
+        height: 25px;
+    }
+    .massage{ /**/
+        height: 50px;
+    }
+    .final{
+        width: 100%;
+        height: 40px;
+        font-size: 25px;
+        border-radius: 20px;
+        margin-top: 20px;
+    }
+    .back{
+        width: 100%;
+        height: 40px;
+        font-size: 25px;
+        border-radius: 20px;
+        margin-top: 10px;
+    }
+    .wrapperText{
+        height: 88%;
+    }
+
+    .info{
+        font-size: 18px;
+    }
+    .boxBtnSide2{
+        bottom: 20px;
+    }
+
+    .btnInfo, .btnOrder, .btnBackSide2, .btnOrderSide2{
+        width: 45%;
+    }
+
 }
 
-
 @media (max-width: 540px) {
-    .wrapper{
+    .wrapper, .wrapperSide2, .wrapperSide3{
         width: 280px;
         height: 430px;
+    }
+    .wrapperText{
+        height: 85%;
     }
     /* .hole{
         width: 80px;
         height: 15px;
-    }
-    .name1{
+    } */
+    /* .name1{
         font-size: 18px;
     }
     .boxBtn{
         bottom: 20px;
-    } */
+    } */ 
 }
