--- a/src/Full/Components/Header/Header.module.css
+++ b/src/Full/Components/Header/Header.module.css
@@ -6,6 +6,7 @@
     top: 0;
     display: flex;
     z-index: 1;
+    border-bottom: 3px solid black;
 }
 
 
@@ -44,9 +45,8 @@
     width: 95%;
     height: auto;
     background-color: #E0F2F1;
-    /* background-color: #0be1d7; */
     border-radius: 30px;
-    /* border: 2px solid white; */
+    border: 3px solid black;
     position: fixed;
     top: 80px;
     left: 50%;
