--- a/src/Full/Components/Main/Main.module.css
+++ b/src/Full/Components/Main/Main.module.css
@@ -9,7 +9,7 @@
 
 .wrapperCard{
     width: 100%;
-    height: 350px;
+    height: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
