--- a/src/Full/Components/Main/Main.module.css
+++ b/src/Full/Components/Main/Main.module.css
@@ -14,6 +14,7 @@
     justify-content: space-around;
     align-items: center;
     overflow-x: auto; 
+    position: relative;
 }
 
 .textName{
@@ -27,6 +28,22 @@
     font-size: 20px;
 }
 
+.arrows{
+    width: 95%;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+}
+.arrowsleft, .arrowsRight{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: rgb(128, 128, 128, 0.7);
+}
 
 
 
