--- a/src/Full/Components/Main/Main.module.css
+++ b/src/Full/Components/Main/Main.module.css
@@ -30,11 +30,18 @@
 
 .arrows{
     width: 95%;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 250px;
     position: absolute;
     display: flex;
     justify-content: space-between;
+    overflow-x: auto;
+    pointer-events: none; 
 }
 .arrowsleft, .arrowsRight{
+    bottom: 10px;
+    z-index: 10;
     width: 40px;
     height: 40px;
     border-radius: 50%;
