--- a/src/Full/Components/Main/Main.module.css
+++ b/src/Full/Components/Main/Main.module.css
@@ -28,16 +28,16 @@
     font-size: 20px;
 }
 
-.arrows{
+/* .arrows{
     width: 95%;
     left: 50%;
     transform: translateX(-50%);
-    bottom: 190px;
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: space-between;
     overflow-x: auto;
     pointer-events: none; 
+    background-color: red;
 }
 .arrowsleft, .arrowsRight{
     bottom: 10px;
@@ -49,7 +49,7 @@
     align-items: center;
     color: white;
     background-color: rgb(128, 128, 128, 0.7);
-}
+} */
 
 
 
