--- a/src/pages/page2/page2.module.css
+++ b/src/pages/page2/page2.module.css
@@ -1,68 +1,43 @@
-/* src/components/HorizontalScrollStrip.module.css */
-
-.wrapper {
-    position: relative;
+.mainWrapper{
     width: 95%;
-    height: 500px;
-    margin: 100px auto;
+    height: auto;
     background-color: #E0F2F1;
+    border-radius: 30px;
+    margin: 100px auto 0 auto; 
+
 }
 
-.wrapperCard {
-    width: 100%;
-    height: 350px;
-    overflow-x: auto;
-    white-space: nowrap;
-    display: flex;
-    align-items: center;
-    background-color: red;
-    position: relative;
-    /* Добавление анимации к градиенту */
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1));
-    background-size: 200% 100%;
-    animation: gradientAnimation 1.5s infinite;
-}
 
-@keyframes gradientAnimation {
-    0% {
-        background-position: 0% 0%;
-    }
-    100% {
-        background-position: 100% 0%;
-    }
-}
-
-.card {
-    display: inline-block;
-    width: 200px; /* Ширина карточки */
-    height: 300px; /* Высота карточки */
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+.name{
     text-align: center;
-    margin: 0 10px; /* Отступы между карточками */
+    padding-top: 30px;
 }
 
-.card img {
-    width: 100%;
-    height: 70%; /* Измените по необходимости */
-    object-fit: cover;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+
+.wrapper{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
-.card p {
-    margin: 10px 0;
-    font-size: 16px;
+
+.wrapper1{
+    margin-top: 30px;
 }
 
-.scrollHint {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 12px;
+
+.emptyBlock{
+    width: 300px;
+    height: 500px;
+}
+
+
+
+
+
+@media (max-width: 780px) {
+    .wrapper{
+        width: 100%;
+    }
 }
